--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,6 +6,10 @@
   font-weight: 400;
   font-style: normal;
 }
+/* Dark-1 */
+.text-dark-gray{
+    color: #131313;
+}
 /* Dark-2 */
 .text-gray{
     color: #424242;
@@ -15,6 +19,7 @@
 .text-light-gray{
     color: #727272;
 }
+
 /* Shared Style */
 .display-flex{
     display: flex;
@@ -23,20 +28,19 @@
     background-color: rgba(255, 144, 14, 0.1);
 }
 /* Header styles */
-/* .header{
-    max-width: 1920px;
-    margin: 0px auto;
-} */
+.brand-title{
+    font-size: 3rem;
+}
+
 /* navbar related Styles */
 .navbar{
     justify-content: space-between;
 }
 .nav-links{
     list-style: none;
+    align-items: center;
 }
-.nav-item{
-    
-}
+
 .nav-link{
     text-decoration: none;
     font-weight: 500;
@@ -47,4 +51,40 @@
 .navbar, .banner{
     max-width: 1920px;
     margin: 0px auto;
+}
+.banner{
+    flex-direction: column;
+}
+/* Banner Style */
+.banner-content{
+    max-width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+    color: #131313;
+    margin: 0px;
+}
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 0.5rem;
+    padding: 20px 25px;
+    border: none;
+}
+.banner-image{
+    width: 100%;
+    border-radius: 8px;
+}
+
+@media screen and (max-width:576px){
+ .navbar, .nav-links{
+    flex-direction: column;
+ }   
 }
