bannrer title response

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -86,5 +86,8 @@
 @media screen and (max-width:576px){
  .navbar, .nav-links{
     flex-direction: column;
- }   
+ }  
+ .banner-title{
+    font-size: 2rem;
+ } 
 }
