--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,6 +6,17 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* Shared Style */
+.display-flex{
+    display: flex;
+}
+.bg-color{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+main > section{
+    margin-top: 130px;
+}
 /* Dark-1 */
 .text-dark-gray{
     color: #131313;
@@ -14,18 +25,13 @@
 .text-gray{
     color: #424242;
 }
-
 /* Dark-3 */
 .text-light-gray{
     color: #727272;
 }
-
-/* Shared Style */
-.display-flex{
-    display: flex;
-}
-.bg-color{
-    background-color: rgba(255, 144, 14, 0.1);
+main{
+    max-width: 1440px;
+    margin: 0 auto;
 }
 /* Header styles */
 .brand-title{
@@ -49,7 +55,7 @@
 }
 
 .navbar, .banner{
-    max-width: 1920px;
+    max-width: 1440px;
     margin: 0px auto;
 }
 .banner{
@@ -82,12 +88,54 @@
     width: 100%;
     border-radius: 8px;
 }
+/* Team and feature related styles */
+.teams{
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.teams-features{
+    margin-left: 60px;
+    max-width: 550px;
+}
+.feature-title{
+    margin: 0;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+#quick-list{
+    font-weight: 500;
+}
+#feature{
+    color: #FF900E;
+}
 
 @media screen and (max-width:576px){
- .navbar, .nav-links{
+ .navbar, 
+ .nav-links,
+ .teams
+ {
     flex-direction: column;
  }  
  .banner-title{
     font-size: 2rem;
  } 
+ .teams-img-container{
+    grid-template-columns: repeat(1,1fr);
+ }
+ .teams-features{
+    margin-left: 20px;
+}
+}
+
+@media screen and (min-width:576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .teams-features{
+        margin: 50px auto;
+    }
 }
