--- a/styles/architects.css
+++ b/styles/architects.css
@@ -147,7 +147,21 @@ main{
 #fact-description{
     max-width: 540px;
 }
+/* Sponsor Related Styles */
+.sponsor-info{
+    max-width: 542;
+    margin: 24px auto;
+    text-align: center;
+}
+.sponsor-companies{    
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 
+/* Responsive Styles */
 @media screen and (max-width:576px){
  .navbar, 
  .nav-links,
@@ -158,12 +172,20 @@ main{
  .banner-title{
     font-size: 2rem;
  } 
- .teams-img-container, .facts-container{
+ .teams-img-container,
+ .facts-container,
+ .sponsor-companies
+ {
     grid-template-columns: repeat(1,1fr);
  }
- .facts-container{
+ .facts-container
+ {
     justify-items: center;
     gap: 20px;
+ }
+ .sponsor-companies{
+    justify-items: center;
+    gap: 50px;
  }
  .teams-features{
     margin-left: 20px;
@@ -177,7 +199,7 @@ main{
     .teams-features{
         margin: 50px auto;
     }
-    .facts-container{
+    .facts-container, .sponsor-companies{
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         gap:50px;
