--- a/styles/architects.css
+++ b/styles/architects.css
@@ -198,6 +198,17 @@ main{
     filter: grayscale(100%);
 }
 
+.footer{
+    /* max-width: 1440px; */
+    background-color: #FFF4E7;
+    text-align: center;
+    padding: 20px 210px;
+    margin-top: 130px;
+    margin-bottom: 200px;
+    margin-left: 150px;
+    margin-right: 240px;
+}
+
 /* Responsive Styles */
 @media screen and (max-width:576px){
  .navbar, 
